# lemodikrysset-api

./: .gitignore  Dockerfile  README.md  auth.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  serve.py  settings.py
routes/: abcd.json  abcde.json  abcdf.json  play.py  qhrw.json  svfs.json  testp.json
services/: creatorservice.py  dbservice.py  puzzleservice.py
