[tool.poetry]
name = "lemodikrysset-api"
version = "0.1.0"
description = "api project for lemodikrysset"
authors = ["Mikael Ivarsson <mikael.ivarsson4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
firebase-admin = "^6.0.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
motor = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
